--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mongoose": "~4.0.3",
     "morgan": "~1.0.0",
     "passport": "^0.3.2",
+    "passport-twitter" : "~1.0.2",
+    "connect-flash" : "~0.1.1",  
     "serve-favicon": "~2.0.1"
   },
   "devDependencies": {
